<!--
  ~ Copyright (c) 2020-2022. Bohdan Kolvakh
  ~ This file is part of MyAccounts.
  ~
  ~ MyAccounts is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ MyAccounts is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  ~
  -->

<resources>
    <string name="app_name" translatable="false">MyAccounts</string>
    <string name="settings">Settings</string>
    <string name="import_database">Import Database</string>
    <string name="check_for_updates">Check for Updates</string>
    <string name="changelog">Changelog</string>
    <string name="about">About</string>

    <string name="edit">Edit</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="export">Export</string>

    <string name="password">Password</string>
    <string name="open_database">Open Database</string>
    <string name="open_db">Open %1$s</string>

    <string name="database_name">Database name</string>
    <string name="database_name_tip">Only latin symbols, numbers and .()-_  are supported</string>
    <string name="repeat_password">Repeat password</string>
    <string name="password_tip">You can generate it using button below</string>
    <string name="generate">Generate</string>
    <string name="create">Create</string>
    <string name="save">Save</string>

    <string name="copyright" translatable="false">© Bohdan Kolvakh</string>
    <string name="version" translatable="false">Version: %1$s</string>
    <string name="license" translatable="false">License</string>

    <!-- Preference Titles -->
    <string name="language">Language</string>
    <string name="block_screen_capture">Block screen capture</string>
    <string name="block_screen_capture_summary">To avoid sensitive info leak</string>
    <string name="title_activity_accounts" translatable="false">AccountsActivity</string>

    <string name="username_">Username:</string>
    <string name="e_mail_">E-mail:</string>
    <string name="password_">Password:</string>
    <string name="date_of_birth_">Date of birth:</string>
    <string name="comment_">Comment:</string>
    <string name="account_name">Account name</string>
    <string name="username">Username</string>
    <string name="e_mail">E-mail</string>
    <string name="comment">Comment</string>

    <string name="empty_changelog">Empty</string>
    <string name="download">Download</string>
    <string name="later">Later</string>
    <string name="dots_menu" translatable="false">⋮</string>
    <string name="success_message">Operation successful!</string>
    <string name="warning">Warning!</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="confirm_delete">Are you sure you want to delete database %1$s?</string>
    <string name="confirm_close">Are you sure you want to close database %1$s?</string>
    <string name="export_error_title">Error exporting database</string>
    <string name="export_file_not_found_details">Every database must have .db and .bin files, it seems that database that you want to export doesn\'t have them.</string>
    <string name="io_error">The reason is any i/o related error such as disk is low on space.</string>
    <string name="delete_error_title">Error deleting database</string>
    <string name="no_updates">No updates available.</string>
    <string name="import_error_title">Error importing .dba file</string>
    <string name="import_dba_size">.dba file must have size of at least 116 bytes, yours: %1$d</string>
    <string name="db_exists">Database with such name already exists.</string>
    <string name="empty">Empty</string>

    <string name="password_error">Incorrect password</string>
    <string name="corrupted_db">The %1$s database is probably corrupted.</string>
    <string name="open_error">Error opening database</string>

    <string name="name_empty">Please, provide a name</string>
    <string name="empty_password">Please, provide a password</string>
    <string name="diff_passwords">Passwords do not match!</string>
    <string name="error_title">Error</string>
    <string name="length_">Length:</string>
    <string name="numbers">Digits</string>
    <string name="big_english_letters">Big english letters</string>
    <string name="small_english_letters">Small english letters</string>
    <string name="punctuation">Punctuation</string>
    <string name="edit_db">Edit %1$s</string>
    <string name="rename_db">Rename %1$s</string>
    <string name="confirm_going_back">If you completely close the app any unsaved changes will be lost.</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_account_delete">Are you sure you want to delete account %1$s?</string>
    <string name="copied">Copied password!</string>
    <string name="name_exists">This name is already taken!</string>
    <string name="pick_date">Pick date</string>
    <string name="confirm_exit">Any unsaved changes will be lost!</string>
    <string name="go_back_title">Are you sure you want to go back?</string>
    <string name="exit_tip">Press back again to exit.</string>
    <string name="update_notice">"Warning!\nApp will restart after update and any unsaved changes will be lost!"</string>
    <string name="loading">Loading…</string>
    <string name="updates_check_failed">Failed to check for updates.</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="failed_to_load_changelog">Failed to load changelog</string>
    <string name="attached_files_label">Attached files:</string>
    <string name="file_is_corrupted">The file is probably corrupted.</string>
    <string name="remove">Remove</string>
    <string name="attach_file">Attach file</string>
    <string name="error_loading">Error loading attached files!</string>
    <string name="paste_password">Paste password</string>
    <string name="you_didn_t_copy_the_password">You didn\'t copy the password!</string>
    <string name="lock_app_title">Lock app with fingerprint</string>
    <string name="lock_app_summary">Lock app with fingerprint when it is minimized and there are opened databases</string>
    <string name="app_lock_tip">For security app is locked when there are any opened databases. Use your fingerprint to unlock it.</string>
    <string name="app_is_locked">App is locked</string>
    <string name="authenticate">Authenticate</string>
    <string name="rename_db_tip">Note: you need to open the database to edit its password.</string>
    <string name="copy_paste_onboarding">
        Copying and pasting into clipboard is unsafe since any program can access the clipboard.
        Instead you\'ll have to temporarily switch to "MyAccounts Board" keyboard,
        which is a special keyboard that contains only one button: "Paste password".
        To switch to MyAccounts Board you\'ll need to enable it in settings,
        you\'ll need to do this only once.

        Here is how it works:
        1. you press the "copy password" button
        2. a dialog appears where you need to select "MyAccounts Board",
        to switch from your keyboard to ours
        3. you go to a field where you need to paste the password
        4. MyAccounts Board keyboard appears
        5. you press the "paste password" button, at which point the password
        is pasted into the field
        6. a dialog appears that you use to switch back to your keyboard

        This way you can safely copy and paste passwords.
        We will redirect you to settings once you press OK, so that you
        could enable MyAccounts Board.
    </string>
</resources>