<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/import_database"
            android:icon="@drawable/ic_import_database"
            android:title="@string/import_database" />
        <item
            android:id="@+id/check_for_updates"
            android:icon="@drawable/ic_check_for_updates"
            android:title="@string/check_for_updates" />
        <item
            android:id="@+id/changelog"
            android:icon="@drawable/ic_changelog"
            android:title="@string/changelog" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
    </group>
</menu>