<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020. Kolvakh Bohdan
  ~ This file is part of MyAccounts.
  ~
  ~ MyAccounts is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ MyAccounts is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/import_database"
            android:icon="@drawable/ic_import_database"
            android:title="@string/import_database" />
        <item
            android:id="@+id/check_for_updates"
            android:icon="@drawable/ic_check_for_updates"
            android:title="@string/check_for_updates" />
        <item
            android:id="@+id/changelog"
            android:icon="@drawable/ic_changelog"
            android:title="@string/changelog" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
    </group>
</menu>