<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020-2021. Kolvakh Bohdan
  ~ This file is part of MyAccounts.
  ~
  ~ MyAccounts is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ MyAccounts is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/export_database_item"
        android:icon="@drawable/ic_import_database"
        android:title="@string/export" />
    <item
        android:id="@+id/delete_database_item"
        android:icon="@drawable/ic_close"
        android:title="@string/delete" />
    <item
        android:id="@+id/edit_database_item"
        android:title="@string/edit" />
    <item
        android:id="@+id/close_database_item"
        android:title="@string/close" />
</menu>