<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/displayAccountLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".ui.DisplayAccountFragment">

    <TextView
        android:id="@+id/accountName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/account_"
        android:textAlignment="textStart"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/accountUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/username_"
        android:textAlignment="textStart"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountName" />

    <TextView
        android:id="@+id/accountEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/e_mail_"
        android:textAlignment="textStart"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountUsername" />

    <TextView
        android:id="@+id/accountPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/password_"
        android:textAlignment="textStart"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountEmail" />

    <TextView
        android:id="@+id/birthDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/date_of_birth_"
        android:textAlignment="textStart"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountPassword" />

    <TextView
        android:id="@+id/accountComment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/comment_"
        android:textAlignment="textStart"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthDate" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/copyPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/ic_copy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:focusable="true" />
</androidx.constraintlayout.widget.ConstraintLayout>